<?xml version="1.0"?>
<package format="2">
  <name>tb3_tools</name>
  <version>1.0.0</version>
  <description>TODO</description>
  <maintainer email="aaronchongth@gmail.com">Aaron Chong</maintainer>
  <license>Apache 2.0</license>
  <author email="aaronchongth@gmail.com">Aaron Chong</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>tf2</exec_depend>

  <exec_depend>free_fleet_ros1</exec_depend>
</package>
